<resources>
    <string name="app_name">Golden Key</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_1">The Golden Key</string>
    <string name="title_2">to Paradise</string>
    <string name="title_3">The Golden Key to Paradise</string>
    <string name="slogan_1">Transform yourself - Transform your world</string>
    <string name="slogan_2">You can live in paradise.</string>
    <string name="slogan_3">All it takes is steady practice.</string>
    <string name="slogan_2a">You can live in paradise.  All it takes is steady practice.</string>
    <string name="instructions_button">Instructions</string>
    <string name="details_button">Details</string>
    <string name="list_button">Build List</string>
    <string name="practice_button">Practice</string>
    <string name="title_activity_details">Golden Key - Details</string>
    <string name="section_1_header">License</string>
    <string-array name="section_1_para_1">
        <item>Copyright 2017 &#169; Roach City Software. </item>
        <item>This software is licensed under the Eclipse Public License 1.0.</item>
    </string-array>
    <string name="section_2_header">Theory</string>
    <string-array name="section_2_para_1">
        <item>This software is designed to change brain function.  </item>
        <item>Specifically, it is designed to increase the over-all </item>
        <item>activity level of the reward centers.</item>
    </string-array>
    <string-array name="section_2_para_2">
        <item>The reward centers become more active when good things happen,</item>
        <item>and we feel happy.  However, the reward centers don\'t stay</item>
        <item>active very long, and the happy feeling generally doesn\'t</item>
        <item>last.  Most of us try to become happy by making more good</item>
        <item>things happen - a never-ending struggle.  There is an</item>
        <item>alternative (or perhaps complimentary) approach.</item>
    </string-array>
    <string-array name="section_2_para_3">
        <item>Researchers studying happiness have noted that some people are generally happier </item>
        <item>than others - and that it doesn\'t seem to have much to do with what\'s actually </item>
        <item>happening in their lives.  People just seem to have different basic happiness levels.  </item>
        <item>This means that the reward centers have different base-line levels of activity in </item>
        <item>different people.  When nothing particularly good or bad is happening, some people </item>
        <item>feel good - have active reward centers - and some people don\'t.</item>
    </string-array>
    <string-array name="section_2_para_4">
        <item>Knowing that some people are just basically happier than others wouldn\'t help much </item>
        <item>if you couldn\'t do anything about it - but you can.  The reward centers are highly </item>
        <item>plastic - their basic activity level changes easily, and a lot, in response to </item>
        <item>stimulus patterns.  This is proven by the phenomenon of drug addiction.  The reward centers </item>
        <item>adapt to the stimulation from the drug, and become less active without the drug.  This means </item>
        <item>that addicts feel bad all the time when they aren\'t high.</item>
    </string-array>
    <string-array name="section_2_para_5">
        <item>Golden Key is designed to produce the opposite effect of drug addiction.  Whether </item>
        <item>stimulation produces habituation (decreased activity, as in drug addiction) or </item>
        <item>potentiation (increased activity) depends on the timing and intensity of the </item>
        <item>stimulus.  Golden Key uses happy thoughts to stimulate the reward centers </item>
        <item>continuously, and as intensely as you can manage, for a limited interval </item>
        <item>(fifteen minutes).  After that, the reward centers are allowed to recover.  This </item>
        <item>pattern will build up the reward centers, not wear them out.</item>
    </string-array>
    <string-array name="section_2_para_6">
        <item>To get the most good out of Golden Key, it\'s important to practice correctly.  Continue </item>
        <item>practicing for the full fifteen minutes - until the \"Next\" button says \"Done\".  Practice </item>
        <item>once a day, every day.  Hold each happy thought just long enough to feel really happy, then </item>
        <item>move to the next thought.  Don\'t let the happy feeling start to fade - you\'re not trying to </item>
        <item>desensitize yourself to happy thoughts!  Make sure your list of good things to think about </item>
        <item>incudes lots of different kinds of happy thoughts - you\'re trying to build happiness in general, </item>
        <item>not just greater liking for one or two kinds of things.</item>
    </string-array>
    <string name="section_3_header">Practice</string>
    <string-array name="section_3_para_1">
        <item>Use the &lt;B>Practice&lt;/B> screen for daily practice.  The screen will show one item from </item>
        <item>your list, and a &lt;B>Next&lt;/B> button.</item>
    </string-array>
    <string-array name="section_3_para_2">
        <item>Think about what\'s good about the item on the screen – why you like it.  </item>
        <item>When you feel as good about the item as you can, press the &lt;B>Next&lt;/B> button.  </item>
        <item>Keep going.  At the end of the session, the &lt;B>Next&lt;/B> button will say &lt;B>Done&lt;/B> </item>
        <item>and the &lt;B>Practice&lt;/B> screen will close when you press it.</item>
    </string-array>
    <string-array name="section_3_para_3">
        <item>The idea is to use each item to make yourself feel good.  If the item is \"hotdogs\", </item>
        <item>and you find yourself remembering a fair where you had a hotdog and how much fun the </item>
        <item>Ferris wheel was, that\'s great - you\'re feeling happy.  If you find yourself </item>
        <item>thinking \"I really wish I had a hotdog right now!\", that\'s not great - you\'re not </item>
        <item>feeling happy.  If you find yourself thinking \"Gee, I feel really stupid thinking </item>
        <item>about hotdogs!\", that\'s not great either.</item>
    </string-array>
    <string-array name="section_3_para_4">
        <item>If you get distracted by some of these not so great thoughts, don\'t try to fight it.  </item>
        <item>Instead, just try to remember what\'s good about your happy list item.  Struggling </item>
        <item>against bad thoughts just makes them stronger.  Actively concentrating on good thoughts </item>
        <item>will lead to the bad thoughts fading away on their own.</item>
    </string-array>
    <string-array name="section_3_para_5">
        <item>Items on the Practice screen can be edited, if you really think you need to.  They can </item>
        <item>also be deleted, if they don’t work anymore.  Just edit or delete the text and press </item>
        <item>the &lt;B>Next&lt;/B> button.</item>
    </string-array>
    <string-array name="section_3_para_6">
        <item>Practice every day to feel really great!</item>
    </string-array>
    <string name="title_activity_build_list">Golden Key - Build List</string>
    <string name="add_button">Add</string>
    <string name="_text_entry_hint">Enter new item here</string>
    <string name="build_list_instruction">List things you like - ANYTHING and EVERYTHING that makes you happy.</string>
    <string name="initial_count">0000</string>
    <string name="list_count_label">Items</string>
    <string name="initial_count_2">000</string>
    <string name="new_count_label">New Items</string>
    <string name="examples_button">Examples</string>
    <string name="examples_caption">Things other people like:</string>
    <string name="examples_footer">Tap item to select for editing</string>
    <string name="next_button">Next</string>
    <string name="practice_prompt1">Think happy thoughts about:</string>
    <string name="practice_prompt2">Tap item to edit (or delete) if needed.</string>
    <string name="blurb_1">This world can be both heaven and hell. It\'s hell when your mind is filled with bad things - problems, failures, loss and pain. It\'s heaven when your mind is filled with good things.</string>
    <string name="blurb_2">You can train your mind to focus more on the good things.  Practice thinking about good things, and feeling happy about them.  This app helps you train.  Start by building a list of good things – at least 50 items (to start with).  Use that list to practice felling happy about good things – in 15 minute sessions once a day.  As with any kind of training, steady practice is key.</string>
    <string name="blurb_3">After a week of regular, daily practice, you will sometimes feel really good for no particular reason.  Keep on training, and this will happen more and more.  After a month of steady practice, you will feel very happy most of the time.  Steady practice is the golden key to paradise.</string>
</resources>