<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivityFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gk_background"
        android:scaleType="centerCrop"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_3"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/blurb_1"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/blurb_2"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/blurb_3"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_button"
        android:id="@+id/details_button"
        android:layout_below="@+id/list_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        android:id="@+id/list_button"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_button"
        android:id="@+id/practice_button"
        android:layout_below="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
         android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
